[package]
name = "iotaup"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "rustup-like version manager for IOTA releases"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", default-features = false, features = ["tls"] }
flate2 = "1"
tar = "0.4"

[profile.release]
lto = true
strip = true
